changes based on feedback: Font change in recent comments Contact page working with api Ongoing contest button now selected change in css for overlapping divs in blog and resource page

--- a/src/components/PostOptions/PostOptions.css
+++ b/src/components/PostOptions/PostOptions.css
@@ -1,4 +1,4 @@
-a {
+/* a {
   color: #47649f;
 }
 
@@ -34,6 +34,7 @@ body {
 .post-footer-comment-wrapper {
   background-color: #f6f7f8;
 }
+*/
 .options-list {
   margin: 10px;
 }
@@ -77,10 +78,8 @@ img {
 .contact-details {
   padding-left: 20px;
   border-left: 1px solid #eee;
-
   flex: 1;
   overflow: hidden;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
