--- a/src/components/ContestsPage/ContestsPage.css
+++ b/src/components/ContestsPage/ContestsPage.css
@@ -96,8 +96,20 @@ a:hover {
 .card .btn-more:hover {
   background: aliceblue;
 }
-
 .event_date {
+  top: 36px;
+  right: 16px;
+  font-size: 12px;
+  border-radius: 2px;
+  background: #4c4a78;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  box-shadow: 0px 2px 4px #707070;
+  font-weight: 700;
+  padding: 2px 12px;
+}
+.contest_provider {
   top: 56px;
   right: 16px;
   font-size: 12px;
